style: fix button errors - fix animation - add spacing fixes

--- a/src/shared/Button/Button.module.scss
+++ b/src/shared/Button/Button.module.scss
@@ -7,10 +7,15 @@
     text-align: center;
     margin-right: 32px;
     width: 120px;
+    height: 24px;
     background-color: #414037;
     color: white;
-    height: 24px;
+
     cursor: pointer;
+
+    span{
+      text-decoration: none;
+    }
     
     &:hover{
       background-color: #8C8C4C;
@@ -21,18 +26,23 @@
 }
 
 .ButtonContainerOutline{
-    padding: 10px;
+    text-decoration: none;
+    padding: 8px;
     font-family: 'Raleway';
     border-radius: 4px;
     font-size: 16px;
     font-weight: 700;
     text-align: center;
     margin-right: 32px;
-    width: 120px;
+    width: 128px;
     color: #414037;
     border: 4px solid #414037;
+    background-color: none;
     cursor: pointer;
 
+    span{
+      text-decoration: none;
+    }
     
     &:hover{
       background-color: #8C8C4C;
@@ -51,13 +61,15 @@
   justify-content: center;
   align-content: center;
   height: 30px;
-  transition: all ease-in-out linear 0.8s;
+  transition: all ease-in-out 0.4s;
   width: 70%;
+  cursor: pointer;
 
   span{
     font: normal normal bold 20px Lato;
     color: #F3F3EB;
-    transition: all ease-in-out linear 0.8s;
+    transition: all ease-in-out 0.4s;
+    text-decoration: none;
   }
 
   .ButtonArrow{
@@ -68,7 +80,7 @@
     height: 24px;
     z-index: 1;
     visibility: hidden;
-    transition: all ease-in-out linear 0.8s;
+    transition: all ease-in-out 0.4s;
   }
 
   &:hover{
@@ -95,13 +107,15 @@
   justify-content: center;
   align-content: center;
   height: 30px;
-  transition: all ease-in-out linear 0.8s;
+  transition: all ease-in-out 0.4s;
   width: 50%;
+  cursor: pointer;
 
   span{
     font: normal normal bold 20px Lato;
     color: #414037;
-    transition: all ease-in-out linear 0.8s;
+    text-decoration: none;
+    transition: all ease-in-out 0.4s;
   }
 
   .ButtonArrow{
@@ -112,7 +126,7 @@
     height: 24px;
     z-index: 1;
     visibility: hidden;
-    transition: all ease-in-out linear 0.8s;
+    transition: all ease-in-out 0.4s;
   }
 
   &:hover{
